# TodoBot

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  main.py  run.py
src/app/: handlers.py  keyboards.py
src/app/database/: database.py  models.py  requests.py
